--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                 <div class="wrapper wrapper--body">
                     <div class="redactor redactor--body row">
                         <div class="col-xs-12 col-sm-8">
-                            <p>cesova is a&nbsp;full-service creative studio based in Luxembourg and Brussels.&nbsp;With more
-                            than 20 years of experience in brand creation and communication design, we deliver for all sectors
+                            <p>cesova is a&nbsp;full-service creative studio based in Colombo and Kandy.&nbsp;With more
+                            than 4 years of experience in software development, brand creation and communication design, we deliver for all sectors
                             and disciplines - offline and&nbsp;online.
                             </p>
                         </div>
